Alterações de funcionalidades do projeto

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     
                 <div id="result">
                     <p id="resultText">
-                        <span id="lightYearsResult">0</span> anos luz equivale a <span id="meters">0</span> em metros.
+                        <span id="lightYearsResult">0</span> anos luz equivale a aproximadamente a distância de <span id="meters">0</span> em metros.
                     </p>
 
                     <button type="button" onclick="goBack()">
